# StellarCade

./: task.md
.githooks/: pre-commit  pre-push
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  smart_contract.md
.github/workflows/: lint.yml  test-backend.yml  test-contracts.yml
backend/: .env.example  .eslintrc.js  README.md  package.json
backend/migrations/: 001_initial_schema.sql
backend/src/: server.js
backend/tests/: setup.js
contracts/: README.md
contracts/ai-generated-game/: Cargo.toml  README.md
contracts/coin-flip/: Cargo.toml  README.md
contracts/coin-flip/src/: lib.rs  test.rs
contracts/coin-flip/test_snapshots/test/: test_double_resolve_rejected.1.json  test_duplicate_game_id_rejected.1.json  test_get_nonexistent_game.1.json  test_init_rejects_reinit.1.json  test_multiple_games.1.json  test_resolve_loss.1.json  test_resolve_win.1.json  test_wager_too_high_rejected.1.json  test_wager_too_low_rejected.1.json  test_zero_wager_rejected.1.json
contracts/color-prediction/: Cargo.toml
contracts/treasury/: Cargo.toml  README.md
contracts/treasury/src/: lib.rs
contracts/treasury/tests/: integration.rs
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING_GUIDE.md  DEPLOYMENT.md  EXPLOIT_RESPONSE_RUNBOOK.md  GAME_RULES.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_CHECKLIST.md  SECURITY_AUDIT_PREP.md  SETUP.md
frontend/: README.md  package.json  tsconfig.json
scripts/: deploy-contracts.sh  generate-keys.js  seed-database.js  setup-testnet.sh
(+141 files in other folders)
