[package]
name = "stellarcade-coin-flip"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = "25.0.2"
stellarcade-random-generator = { path = "../random-generator" }

[dev-dependencies]
soroban-sdk = { version = "25.0.2", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]
